# blog

./: README.md  bash_extensions.bash  bootstrap.lisp  change-content-date  config  config.ini  content-metadata  content-render  contents.bash  create-content  create-post.lisp  date.bash  delete-content  diasbruno.asd  diasbruno.configuration.asd  diasbruno.database.asd  diasbruno.database.post.asd  diasbruno.opensource.asd  diasbruno.page.article.asd  diasbruno.page.asd  diasbruno.page.index.asd  diasbruno.page.opensource.asd  diasbruno.post.asd  docker-compose.yml  engine.bash  flake.nix  generate-all  generate-article  generate-articles  generate-index  log.bash  metadata.bash  publish-content  scenes.js  shell.nix  site.cabal  string.bash  template.bash  tools.bash  transform-metadatas.lisp
.github/workflows/: tests.yml
contents/: 20200321150000-i-love-makefiles.md  20200429150000-patterns--writing-a-step-component.md  20210305150000-transpiling-code-from-other-languages.md  20210608150000-i-love-comby-.md  20211203150000-modeling-algorithms-with-types.md  20220330150000-processes-and-pipes-in-oop.md  20220528223052-property-based-testing-for-the-win-.md  20220618194635-fun-with-rust--mqtt--lora-and-raspiberry-pi.md  20220715200918-router---more-than-a-web-component.md  20230210143155-it-s-time-to-retire-conventional-commit.md  20230312195855-forget-about-state--think-about-events-commands.md  20230319153528-even-more-ideas-with-types-and-javascript--equality--ordering-and-enumeration-.md  20230504231952-working-with-sets-and-some-ideas.md  20230917222909-problems-when-reexporting-javascript-modules.md  20231230223458-building-pipelines-and-avoid-suffering.md  20241114120000-por-que-voce-escreve-const-x-null-alternative.md  database.json  opensource.json
contents/20200320150000-metaprogramming-in-javascript/: content.md  metadata.sh
contents/20200321150000-i-love-makefiles/: metadata.sh
src/: ArticlePage.hs  Configuration.hs  Data.hs  Date.hs  Feed.hs  File.hs  IndexPage.hs  Main.hs  OpensourcePage.hs  PageLayout.hs  Types.hs  article.lisp  configuration.lisp  database.lisp  index-page.lisp  opensource-page.lisp  opensource.lisp  page.lisp  personal-site.lisp  post-database.lisp  post.lisp
t/: config  makefile  test-create-delete-content.bash  test-tools.bash
(+29 files in other folders)
