cabal-version:      3.0
name:               site
version:            0.1.0.0
-- synopsis:
-- description:
license:            Fair
license-file:       LICENSE
author:             Bruno Dias
maintainer:         dias.h.bruno@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options:

library
    import:           warnings
    exposed-modules:  Data
                    , Date
                    , File
                    , Configuration
                    , Types
                    , PageLayout
                    , ArticlePage
                    , IndexPage
                    , Main
    build-depends:    base ^>=4.16.4.0
                    , ini
                    , containers
                    , time
                    , process
                    , blaze-markup
                    , blaze-html
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010
